add bounding box to shape endpoint (#471) (#492)
Update get shapes routes to include ids and bbox parameters
