# geox-api/app/routes/shape_metadata.py
@@ -1,14 +1,13 @@
-from typing import List
+from typing import List, Optional
 
 from fastapi import APIRouter, Depends, Query
 
-from app.crud.shape import (
-    get_shape_metadata_by_bounding_box,
-    get_shape_metadata_matching_search,
-    select_shape_metadata,
-)
+from pydantic import UUID4
+
+from app.crud.shape import get_shape_metadata_matching_search, select_shape_metadata
 from app.dependencies import UserConnection, get_app_user_connection, verify_token
 from app.schemas import GeoShapeMetadata, ViewportBounds
+from fastapi import HTTPException
 
 router = APIRouter(
     tags=["geofencer", "shape-metadata"], dependencies=[Depends(verify_token)]
@@ -36,8 +35,10 @@ def _get_shape_metadata__bbox(
 ) -> List[GeoShapeMetadata]:
     """Get shape metadata by bounding box."""
     bbox = ViewportBounds(min_x=min_x, min_y=min_y, max_x=max_x, max_y=max_y)
-    shapes = get_shape_metadata_by_bounding_box(
-        user_conn.connection, bbox, limit, offset
+    shapes = list(
+        select_shape_metadata(
+            user_conn.connection, bbox=bbox, limit=limit, offset=offset
+        )
     )
     return shapes
 
@@ -62,6 +63,10 @@ def _get_shape_metadata__search(
     return shapes
 
 
+from typing import Tuple
+from app.core.datatypes import Latitude, Longitude
+
+
 @router.get(
     "/geofencer/shape-metadata",
     response_model=List[GeoShapeMetadata],
@@ -69,16 +74,33 @@ def _get_shape_metadata__search(
 )
 def _get_shape_metadata(
     user_conn: UserConnection = Depends(get_app_user_connection),
-    # namespace: Optional[UUID4] = Query(default=None),
     offset: int = Query(default=0),  # Query(default=0, title="Item offset", ge=0),
     limit: int = Query(default=DEFAULT_LIMIT),
+    user: Optional[bool] = Query(
+        default=None,
+        title="Get shapes for a user",
+        description="If TRUE, then only return shapes of the requesting user.",
+    ),
+    namespace: Optional[UUID4] = Query(default=None, title="Namespace id."),
+    shape_ids: Optional[List[UUID4]] = Query(default=None, title="Shape ids."),
+    bbox: Tuple[Longitude, Latitude, Longitude, Latitude] = Query(
+        default=None, title="Bounding box (min x, min y, max x, max y)"
+    ),
 ) -> List[GeoShapeMetadata]:
     """Get all shape metadata with pagination."""
+    try:
+        bbox_obj = ViewportBounds.from_list(bbox)
+    except ValueError:
+        raise HTTPException(422, "Invalid bbox")
+    user_id = user_conn.user.id if user else None
     return list(
         select_shape_metadata(
             user_conn.connection,
-            # namespace_id=namespace,
+            namespace_id=namespace,
             limit=limit,
             offset=offset,
+            user_id=user_id,
+            ids=shape_ids,
+            bbox=bbox_obj,
         )
     )
